[package]
name = "num-sign"
version = "0.1.0"
edition = "2021"
authors = ["Yuichiro Terada <terada.yuichiro@gmail.com>"]
repository = "https://github.com/u1roh/num-sign"
documentation = "https://docs.rs/num-sign"
keywords = ["sign", "positive", "negative"]
readme = "README.md"
description = "enum Sign { Positive = 1, Negative = -1 }"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
